--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <figure>
             <img id="personal-logo" src="/assets/logo.svg" alt="">
            </figure> 
-           <ul class="nav_link--list">
+           <ul class="nav__link--list">
             <li class="nav__link">
                 <a href="#" class="
                 nav__link--anchor
