--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <button class="mail_btn click">
             <i class="fas fa-envelope"></i>
         </button>
-        <a href="#projects" class="scroll">
-            <div .scroll__icon click> </div>
+        <a href="#projects" class= "scroll">
+            <div class="scroll__icon click"> </div>
 
         </a> 
         </div>
