--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                              class="social__link click">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="" class="social__link click">
+                    <a href="https://github.com/angleshero" target="_blank" class="social__link click">
                         <i class="fab fa-github"></i>
                         </a>
                     <a href="assets/Tommy Cowart Resume.pdf" target="_blank" class="social__link click">
