--- a/index.html
+++ b/index.html
@@ -118,6 +118,54 @@
         </div>
 
     </section>
+    <footer>
+        <div class="container">
+            <div class="row footer__row">
+
+            </div>
+            <figure>
+                <img class="footer__logo--img" src="./assets/logo.svg" alt="">
+            </figure>
+            <div class="footer__social--list">
+                <a href="#" class="
+                footer__social--link
+                liver__hover-effect
+                liver__hover-effect--white
+                ">
+                GitHub
+
+                </a>
+                  <a href="#" class="
+                footer__social--link
+                liver__hover-effect
+                liver__hover-effect--white
+                ">
+                LinkedIn
+
+                </a>
+                  <a href="#" class="
+                footer__social--link
+                liver__hover-effect
+                liver__hover-effect--white
+                ">
+                Contact
+
+                </a>
+                  <a href="#" class="
+                footer__social--link
+                liver__hover-effect
+                liver__hover-effect--white
+                ">
+                Resume
+
+                </a>
+            </div>
+            <div class="footer__copyright">Copyright © 2025 Tommy Cowart</div>
+
+
+
+        </div>
+    </footer>
 
 </body>
 </html>
