--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="landing-page">
         <nav>
-           <figure>
+            class="modal__language"
             <img id="personal-logo" src="/assets/logo.svg" alt="">
            </figure> 
            <ul class="nav__link--list">
@@ -77,6 +77,36 @@
             <div class="scroll__icon click"> </div>
 
         </a> 
+        <div class="modal">
+            <div class="modal__half modal__about">
+                <h3 class="modal__title">Here's a bit about me.</h3>
+                <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer.</h4>
+                <p class="modal__para">
+                    I am a <b class="blue">frontend software engineer</b> looking to gain great experiences.
+                    <br>
+                    I currently enjoy learning from talented and experienced <b class="blue">software engineers</b>.
+                </p>
+                <div class="modal__languages">
+                    <figure class="modal__language">
+                        <img class="modal__languge--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">HTML</span>
+                    </figure>
+                     <figure class="modal__language">                    
+                        <img class="modal__languge--img" src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="">
+                        <span class="language__name">CSS</span>
+                    </figure>
+                     <figure class="modal__language">
+                        <img class="modal__languge--img" src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="">
+                        <span class="language__name">JavaScript</span>
+                    </figure>
+                     <figure class="modal__language">
+                        <img class="modal__languge--img" src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="">
+                        <span class="language__name">REACT</span>
+                    </figure>
+                </div>
+            </div>
+            <div class="modal__half modal__contact">Let's have a chat</div>
+        </div>
         </div>
     </section>
     <section id="projects">
@@ -88,7 +118,7 @@
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/blinker mockup.png" class="project__image">
+                            <img src="./assets/blinker mockup.png" class="project__img">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
@@ -122,39 +152,39 @@
         <div class="container">
             <div class="row footer__row">
 
-            </div>
-            <figure>
+            
+             class="modal__language"
                 <img class="footer__logo--img" src="./assets/logo.svg" alt="">
             </figure>
             <div class="footer__social--list">
                 <a href="#" class="
                 footer__social--link
-                liver__hover-effect
-                liver__hover-effect--white
+                link__hover-effect
+                link__hover-effect--white
                 ">
                 GitHub
 
                 </a>
                   <a href="#" class="
                 footer__social--link
-                liver__hover-effect
-                liver__hover-effect--white
+                link__hover-effect
+                link__hover-effect--white
                 ">
                 LinkedIn
 
                 </a>
                   <a href="#" class="
                 footer__social--link
-                liver__hover-effect
-                liver__hover-effect--white
+                link__hover-effect
+                link__hover-effect--white
                 ">
                 Contact
 
                 </a>
                   <a href="#" class="
                 footer__social--link
-                liver__hover-effect
-                liver__hover-effect--white
+                link__hover-effect
+                link__hover-effect--white
                 ">
                 Resume
 
@@ -163,7 +193,7 @@
             <div class="footer__copyright">Copyright © 2025 Tommy Cowart</div>
 
 
-
+            </div>
         </div>
     </footer>
 
