--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
                 </p>
                 <div class="modal__languages">
                     <figure class="modal__language">
-                        <img class="modal__languge--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
                         <span class="language__name">HTML</span>
                     </figure>
                      <figure class="modal__language">                    
-                        <img class="modal__languge--img" src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="">
+                        <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="">
                         <span class="language__name">CSS</span>
                     </figure>
                      <figure class="modal__language">
-                        <img class="modal__languge--img" src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="">
+                        <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="">
                         <span class="language__name">JavaScript</span>
                     </figure>
                      <figure class="modal__language">
-                        <img class="modal__languge--img" src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="">
+                        <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="">
                         <span class="language__name">REACT</span>
                     </figure>
                 </div>
