--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Tommy Cowart</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <script src="index.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "I2MhMNPK4zmqBk9ul",
+      });
+   })();
+</script>
     
 </head>
 <body>
@@ -112,7 +123,7 @@
                 <h4 class="modal__sub-title modal__sub-title-contact">
                     I'm currently open to new opportunities.
                 </h4>
-                <form id="contact__form" action="">
+                <form id="contact__form" onsubmit="contact(event)">
                     <div class="form__item">
                         <label class="form__item--label">Name</label>
                         <input class="input" name="user__name" type="text" required></input>
