--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         Send it my way
                     </button>
                 </form>
-                <div class="modal__ovarlay modal__overlay--loading">
+                <div class="modal__overlay modal__overlay--loading">
                     <i class="fas fa-spinner"></i>
                 </div>
                 <div class="modal__overlay modal__overlay--success">
