--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 link__hover-effect--black
                 ">About</a>
                 </li>
-                <li class="nav__link click">
+                <li class="nav__link ">
                 <a href="#" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
                 ">Projects</a>
                 </li>
-                <li class="nav__link click">
+                <li class="nav__link" onclick="toggleModal()">
                 <a href="#" class="
                 nav__link--anchor
                 link__hover-effect
@@ -64,7 +64,7 @@
                 <h1 class="title blue">I'm Tommy</h1>
                 <p class="header__para">
                     I'm a <b class="blue">Frontend Software Developer</b> with a strong passion for new expieriences. <br>
-                    Here's a bit more <b class="blue">about me</b>.
+                    Here's a bit more <b class="blue click" onclick="toggleModal()">about me.</b>
                 </p>
                 <div class="social__list">
                     <a href="https://www.linkedin.com/in/tommy-l-cowart" target="_blank"
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </header>
-        <button class="mail_btn click">
+        <button class="mail_btn click" onclick="toggleModal()">
             <i class="fas fa-envelope"></i>
         </button>
         <a href="#projects" class= "scroll">
@@ -117,6 +117,7 @@
                 </div>
             </div>
             <div class="modal__half modal__contact">
+                <i class="fas fa-times modal__exit click"onclick="toggleModal()"></i>
                 <h3 class="modal__title modal__title--contact">
                     Let's have a chat!
                 </h3>
@@ -148,7 +149,7 @@
                 </div>
 
             </div>
-            <i class="fas fa-times modal__exit click"></i>
+            
         </div>
         </div>
     </section>
