--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img id="personal-logo" src="/assets/logo.svg" alt="">
            </figure> 
            <ul class="nav__link--list">
-            <li class="nav__link">
+            <li class="nav__link" onclick="toggleModal()">
                 <a href="#" class="
                 nav__link--anchor
                 link__hover-effect
@@ -34,7 +34,7 @@
                 ">About</a>
                 </li>
                 <li class="nav__link ">
-                <a href="#" class="
+                <a href="projects" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </header>
+        <a href="#">
         <button class="mail_btn click" onclick="toggleModal()">
             <i class="fas fa-envelope"></i>
         </button>
@@ -206,11 +207,11 @@
             <div class="row footer__row">
 
             
-             class="modal__language"
+             
                 <img class="footer__logo--img" src="./assets/logo.svg" alt="">
             </figure>
             <div class="footer__social--list">
-                <a href="#" class="
+                <a href="#" target="_blank" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
@@ -218,7 +219,7 @@
                 GitHub
 
                 </a>
-                  <a href="#" class="
+                  <a href="#" target="_blank" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
@@ -226,7 +227,7 @@
                 LinkedIn
 
                 </a>
-                  <a href="#" class="
+                  <a href="#" onclick="toggleModal()" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
@@ -234,7 +235,7 @@
                 Contact
 
                 </a>
-                  <a href="#" class="
+                  <a href="assets/Tommy Cowart Resume.pdf" target="_blank" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white
